force-app/main/default/objects/Quoting_Rules__c/Quoting_Rules__c.object-meta.xml
<CustomObject>
    <label>Quoting Rules</label>
    <nameField>
        <label>Quoting Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quoting Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>