force-app/main/default/objects/Quoting_Rules__c/fields/AutoPilot__c.field-meta.xml
<CustomField>
    <fullName>AutoPilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPilot</label>
    <type>Checkbox</type>
</CustomField>