force-app/main/default/objects/Quoting_Rules__c/fields/HydraulicSystem__c.field-meta.xml
<CustomField>
    <fullName>HydraulicSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HydraulicSystem</label>
    <type>Checkbox</type>
</CustomField>