force-app/main/default/objects/Quoting_Rules__c/fields/RearSeats__c.field-meta.xml
<CustomField>
    <fullName>RearSeats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rear Seats</label>
    <type>Checkbox</type>
</CustomField>