force-app/main/default/objects/Quoting_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Model__c</columns>
    <columns>Battery__c</columns>
    <columns>AutoPilot__c</columns>
    <columns>HydraulicSystem__c</columns>
    <columns>RearSeats__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>